gccida/c3/cse_insn
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cse_insn/src/cse.c:5227:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v16; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cse_insn/src/cse.c:5230:4: error: expected ';' after expression
rtx v19; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cse_insn/src/cse.c:5230:5: error: use of undeclared identifier 'v19'
rtx v19; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cse_insn/src/cse.c:5238:4: error: expected ';' after expression
rtx v27; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cse_insn/src/cse.c:5238:5: error: use of undeclared identifier 'v27'
rtx v27; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cse_insn/src/cse.c:5244:4: error: expected ';' after expression
rtx src; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cse_insn/src/cse.c:5244:5: error: use of undeclared identifier 'src'
rtx src; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cse_insn/src/cse.c:5248:4: error: expected ';' after expression
rtx v37; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cse_insn/src/cse.c:5248:5: error: use of undeclared identifier 'v37'
rtx v37; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cse_insn/src/cse.c:5251:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v40; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cse_insn/src/cse.c:5253:4: error: expected ';' after expression
rtx v42; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cse_insn/src/cse.c:5253:5: error: use of undeclared identifier 'v42'
rtx v42; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cse_insn/src/cse.c:5256:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v45; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cse_insn/src/cse.c:5262:4: error: expected ';' after expression
rtx v51; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cse_insn/src/cse.c:5262:5: error: use of undeclared identifier 'v51'
rtx v51; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cse_insn/src/cse.c:5280:4: error: expected ';' after expression
rtx v69; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cse_insn/src/cse.c:5280:5: error: use of undeclared identifier 'v69'
rtx v69; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cse_insn/src/cse.c:5286:4: error: expected ';' after expression
rtx v75; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cse_insn/src/cse.c:5286:5: error: use of undeclared identifier 'v75'
rtx v75; // r14 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cse_insn/src/obj/cse.o] Error 1
